# flagfile

./: .gitignore  .vimspector.json  Cargo.toml  Flagfile  Flagfile.example  Flagfile.tests  README.md  TODO.md  dist-workspace.toml  example-feature.rule  security-research.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: flagfile_test.yaml  release.yml  rust.yml  tests.yml
docs/: TODO.md  next.md  roadmap.md
docs/syntax/: 01-getting-started.md  02-return-types.md  03-rules-and-defaults.md  04-comparisons.md  05-logic-and-grouping.md  06-string-matching.md  07-arrays-membership.md  08-null-checks.md  09-functions.md  10-percentage-rollouts.md  11-segments.md  12-environments.md  13-annotations.md  14-tests.md  15-includes.md  README.md
examples/js_example/: Flagfile  index.js  package-lock.json  package.json
examples/py_openfeature_api_example/: README.md
examples/rust_example/: Cargo.toml  Flagfile
examples/rust_example/src/: main.rs
examples/rust_remote_example/: Cargo.toml  Flagfile
examples/rust_remote_example/src/: main.rs
flagfile-cli/: Cargo.toml  README.md  build.rs
flagfile-cli/proto/: flagfile_raft.proto
flagfile-cli/src/: lint.rs  main.rs  pull.rs  push.rs  push_launchdarkly.rs  serve.rs
flagfile-cli/src/formatter/: classify.rs  format.rs  mod.rs  normalize.rs
flagfile-cli/src/lint/: circular_deps.rs  circular_segments.rs  coalesce_constant_first.rs  deprecated.rs  deprecated_no_expiry.rs  duplicate_flags.rs  duplicate_requires.rs  empty_flag.rs  env_missing_default.rs  experiment_no_expiry.rs  expired.rs  missing_default.rs  missing_owner.rs  mixed_return_types.rs  mod.rs  percentage_range.rs  redundant_function.rs  shadowed_env_rules.rs  tautology.rs  undefined_requires.rs  undefined_segment.rs  unreachable_rules.rs  unused_segments.rs
flagfile-cli/src/server/: auth.rs  config.rs  metrics.rs  mod.rs  ofrep.rs  routes.rs  sidecar.rs  sse.rs  state.rs  watch.rs
flagfile-cli/src/server/raft/: mod.rs  node.rs  state_machine.rs  storage.rs  transport.rs
flagfile-cli/src/server/store/: memory.rs  mod.rs  sled_store.rs
flagfile-cli/tests/: include_cli_test.rs
flagfile-cli/tests/fixtures/include/: ld.toml
flagfile-cli/tests/fixtures/include/escape/dir/: Flagfile
flagfile-cli/tests/fixtures/include/fmt_clean/: Flagfile
flagfile-cli/tests/fixtures/include/fmt_clean/sub/: Flagfile
flagfile-cli/tests/fixtures/include/fmt_unformatted/: Flagfile
flagfile-cli/tests/fixtures/include/fmt_unformatted/sub/: Flagfile
flagfile-cli/tests/fixtures/include/withtests/sub/: Flagfile
flagfile-cli/tests/fixtures/include/withtests_fail/: Flagfile.tests
flagfile-cli/tests/fixtures/include/withtests_fail/sub/: Flagfile  Flagfile.tests
flagfile-go/: ast.go  atom.go  eval.go  flagfile.go  flagfile_test.go  go.mod  parser.go  parser_test.go
flagfile-js/: parser.js
flagfile-neovim/: README.md
flagfile-neovim/ftdetect/: flagfile.vim
flagfile-neovim/ftplugin/: flagfile.vim
flagfile-neovim/syntax/: flagfile.vim
flagfile-ts/: evaluator.ts  index.ts  lexer.ts  package-lock.json  package.json  parser.ts  run.ts  tsconfig.json
flagfile-ts/src/: api.test.ts  ast.ts  eval.test.ts  eval.ts  flagfile.test.ts  flagfile.ts  index.ts  integration.test.ts  parser.test.ts  parser.ts
flagfile-vscode-plugin/: flagfile-0.1.0.vsix  flagfile-0.1.1.vsix  language-configuration.json  package-lock.json  package.json
flagfile-vscode-plugin/src/: extension.ts
flagfile-vscode-plugin/syntaxes/: flagfile.tmLanguage.json
public/: index.html  pencil-new-landing-page.pen
scripts/: protoc-shim.sh
src/: ast.rs  builder.rs  eval.rs  include.rs  lib.rs  main.rs  parse.rs  parse_flagfile.rs
src/transpile/: launchdarkly.rs  mod.rs
tests/: include_test.rs  parser_test.rs  test_openfeature_api.http  test_rest_api.http
tests/fixtures/include/abs/: Flagfile
tests/fixtures/include/basic/: Flagfile  Flagfile.demo
tests/fixtures/include/comments/: Flagfile
tests/fixtures/include/cycle/: Flagfile  a.ff  b.ff
tests/fixtures/include/escape/: secret.ff
tests/fixtures/include/missing/: Flagfile
tests/fixtures/include/nested/: Flagfile
tests/fixtures/include/nested/sub/: Flagfile
tests/fixtures/include/nested/sub/deep/: more.ff
tests/fixtures/include/selfcycle/: Flagfile
tests/fixtures/include/withtests/: Flagfile
tests/fixtures/include/withtests/sub/: Flagfile.tests
tests/openfeature/python/: requirements.txt  test.py
