[package]
name = "bool_expr_parser_nom"
version = "0.2.6"
edition = "2021"
authors = ["Nikolajus Krauklis <nikolajus@gmail.com>"]

[lints.rust]
unsafe_code = "forbid"
unused = "allow"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"

[dependencies]
chrono = "0.4.34"
nom = "7.1.3"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
