[package]
name = "flagfile-lib"
version = "0.3.8"
edition = "2021"
authors = ["Nikolajus Krauklis <nikolajus@gmail.com>"]
repository = "https://github.com/dzhibas/flagfile"
dist = false

[workspace]
resolver = "2"

members = [
    "flagfile-cli",
    "."
, "examples/rust_example"]

[lints.rust]
unsafe_code = "forbid"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
chrono = "0.4.34"
nom = "7.1.3"
serde_json = "1.0.114"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
