[package]
name = "flagfile-lib"
version = "0.4.12"
edition = "2021"
authors = ["Nikolajus Krauklis <nikolajus@gmail.com>"]
repository = "https://github.com/dzhibas/flagfile"

[workspace]
resolver = "2"

members = ["flagfile-cli", ".", "examples/rust_example", "examples/rust_remote_example"]
default-members = [".", "flagfile-cli"]

[lints.rust]
unsafe_code = "forbid"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
default = []
remote = ["reqwest", "tokio"]

[dependencies]
chrono = "0.4.34"
nom = "7.1.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
serde_json = "1.0.114"
sha1 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
