[package]
name = "flagfile-cli"
version = "0.1.4"
edition = "2021"
description = "CLI tool for managing and evaluating Flagfile feature flags"
authors = ["Nikolajus Krauklis <nikolajus@gmail.com>"]
repository = "https://github.com/dzhibas/flagfile"
homepage = "https://github.com/dzhibas/flagfile"
dist = true

[[bin]]
name = "ff"
path = "src/main.rs"

[[bin]]
name = "flagfile"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
axum = "0.8"
clap = { version = "4.5.0", features = ["derive", "env"] }
flagfile-lib = { path = ".." }
ignore = "0.4"
notify = "7"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
toml = "0.8"
